// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="src-components-datepicker-search-field__container"
>
  <div
    className="src-components-datepicker-search-field__text-wrapper"
  >
    <Text
      autos={true}
      className="src-components-datepicker-search-field__text"
      disabled={false}
      error={false}
      forceSingleLine={true}
      id="some-id"
      maxLength={100}
      onClick={[Function]}
      password={false}
      placeholder=""
      readOnly={true}
      value="2017/01/01"
    />
  </div>
  <ResetButton
    disabled={false}
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly when it has an error 1`] = `
<div
  className="src-components-datepicker-search-field__container"
>
  <div
    className="src-components-datepicker-search-field__text-wrapper"
  >
    <Text
      autos={true}
      className="src-components-datepicker-search-field__text"
      disabled={false}
      error={true}
      forceSingleLine={true}
      id="some-id"
      maxLength={100}
      onClick={[Function]}
      password={false}
      placeholder=""
      readOnly={true}
      value="2017/01/01"
    />
  </div>
  <ResetButton
    disabled={false}
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly when it has no value 1`] = `
<div
  className="src-components-datepicker-search-field__container"
>
  <div
    className="src-components-datepicker-search-field__text-wrapper"
  >
    <Text
      autos={true}
      className="src-components-datepicker-search-field__text"
      disabled={false}
      error={false}
      forceSingleLine={true}
      id="some-id"
      maxLength={100}
      onClick={[Function]}
      password={false}
      placeholder=""
      readOnly={true}
      value="Select a date..."
    />
  </div>
  <ResetButton
    disabled={false}
    onClick={[Function]}
  />
</div>
`;
